--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ version:             0.0.1
 # Gems
 gems: [jekyll-paginate]
 
-# KaTeX
-markdown: kramdown
-kramdown:
-  math_engine: mathjax
-
 # Code indention (tab)
 pygments_options:
   tabsize:  4
+
+# KaTeX
+kramdown:
+  math_engine: mathjax
+  # math_engine: nil # for katex (because kramdown defaults to mathjax)
 
 excerpt_separator: '<!--more-->'
