[feature] Change code view style (scroll bar)

--- a/_config.yml
+++ b/_config.yml
@@ -109,15 +109,18 @@ sass:
 # Gems
 plugins:
   - jekyll-paginate
-  - jekyll-feed
   - jekyll-sitemap
+  # - jekyll-feed
 
 # feed
-atom_feed:
-  path                   : # blank (default) uses feed.xml
+# atom_feed:
+#   path                   : # blank (default) uses feed.xml
 
 # KaTeX
 kramdown:
+  input: GFM
+  auto_ids: true
+  # parse_block_html: true
   math_engine: mathjax
   # math_engine: nil # for katex (because kramdown defaults to mathjax)
 
