[about] Update grade & rank

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
   name             : Hongzheng Chen
   email            : chenhzh37@mail2.sysu.edu.cn
   avatar           : "profile-meow.jpg"
-  bio              : "A junior student in Sun Yat-sen University"
+  bio              : "A senior student in Sun Yat-sen University"
   location         : "Guangzhou, China"
   employer         :
   googlescholar    :
